# redpanda

./: CMakeLists.txt  README.md  snakeoil.csr  snakeoil.key  snakeoil.pem  test_rpfixture.cpp  test_rpunit.cpp
cmake/: BoostTestDiscoverTests.cmake  testing.cmake
src/v/archival/: archival_metadata_stm.cc  ntp_archiver_service.cc  probe.cc  probe.h
src/v/bytes/: iobuf_parser.h
src/v/cloud_storage/: base_manifest.cc  base_manifest.h  partition_manifest.cc  partition_manifest.h  remote.cc  remote.h  remote_partition.cc  remote_partition.h  remote_segment.cc  segment_meta_cstore.cc  segment_meta_cstore.h  topic_manifest.cc  topic_manifest.h  tx_range_manifest.cc  tx_range_manifest.h  types.cc  types.h
src/v/cluster/: CMakeLists.txt  archival_metadata_stm.cc  commands.h  config_manager.cc  controller_log_limiter.h  feature_manager.cc  node_status_backend.cc  partition.cc  partition.h  partition_recovery_manager.cc  remote_topic_configuration_source.cc  rm_stm.cc  tm_stm.cc  tm_stm.h  topic_recovery_service.cc  topic_recovery_validator.cc  topic_recovery_validator.h  topic_table.cc  topic_table.h  topic_updates_dispatcher.cc  topic_updates_dispatcher.h  topics_frontend.cc  tx_gateway_frontend.h  types.h
src/v/config/: CMakeLists.txt  base_property.cc  base_property.h  config_store.cc  config_store.h  configuration.cc  configuration.h  node_config.cc  property.h
src/v/features/: feature_table.cc  feature_table.h
src/v/json/: schema_document.h
src/v/migrations/: CMakeLists.txt
tests/docker/: docker-compose.yml
tools/: cmake_test.py  dev_cluster.py
(+54 files in other folders)
